--- a/chat.html
+++ b/chat.html
@@ -160,7 +160,7 @@
     <div class="chat-container">
         <div class="header">
             <div class="header-content">
-                <h3>Chat with AI</h3>
+                <h3>Teman Setia 😍</h3>
                 <span class="status">Online</span>
             </div>
             <div class="menu" onclick="toggleMenu()">⋮</div>
