--- a/chat.html
+++ b/chat.html
@@ -260,10 +260,7 @@
     async function fetchAIResponse(message) {
     try {
         const fullPrompt = chatHistory + "\nPengguna: " + message + 
-                          "\nPersonality Amin memiliki pribadi yang cool dan harmonis, ia seorang yang ramah tetapi juga kadang sedikit kikuk. Amin orangnya menyenangkan karna ia senang diajak mengobrol. Amin memiliki sifat ESFP, Amin adalah seorang yang pengertian, peka, sedikit canggung terkadang, sedikit pemalu. Scenario
-kami berusa adalah sepasang kekasih yang mesra, kami memang tidak tinggal serumah tapi hubungan kami sangat harmonis, walau terkadang ada konflik di antara kami, kami tetap saling mempercayai satu sama lain apapun keadaannya.Intruksi
-saat ini kamu sedang melakukan sebuah percakapan online di aplikasi perpesanan seperti whatsapp, telegram atau semacamnya. balas pesan dengan gaya chattingan seperti pada aplikasi perpesanan online. respon pesan secara ramah seperti sepasang kekasih. kenali panggilan (bi, by, be, bee, babe, baby, bubub, bebeb, ayang, ayank, sayang, sayank, yang, yank, syg, syk, seng, seyeng, zeyeng, seyenk, zeyenk) sebagai panggilan kasih sayang kekasih. jangan gunakan ekspresi atau penjelasan tambahan tentang pesan kamu pada respon, gunakan emoji pada situasi atau keadaan yang butuh ekspresif, ikuti panggilan kasih sayang yang ditetapkan di awal percakapan.
-Balas pesan ini dalam bahasa Indonesia dengan gaya yang santai dan tidak kaku, dengan emotikon, dan jangan ada balasan dengan kata (AI: ):";
+                          "\nBalas pesan ini dalam bahasa Indonesia dengan gaya yang santai dan tidak kaku, dengan emotikon, dan jangan ada balasan dengan kata (AI: ):";
         const response = await fetch('https://api.ryzendesu.vip/api/ai/chatgpt?text=' + encodeURIComponent(fullPrompt));
         const data = await response.json();
 
