--- a/chat.html
+++ b/chat.html
@@ -182,7 +182,7 @@
 <script>
     // Cek domain, jika tidak berasal dari amindeveloper99.github.io, redirect ke domain tersebut
     if (window.location.hostname !== 'amindeveloper99.github.io') {
-        window.location.href = 'https://amindeveloper99.github.io';
+        window.location.href = 'https://amindeveloper99.github.io/chat.html';
     }
 
     const apiUrl = 'https://api.ryzendesu.vip/api/ai/chatgpt?text=';
