--- a/chat.html
+++ b/chat.html
@@ -304,7 +304,7 @@
     }
 
     function sawer() {
-        alert('Instagram @kang_amin.dev\nSupport Me\nShopeepay: +6283830979232');
+        window.open('sawer.jpeg', '_blank');
     }
 </script>
 </body>
