--- a/chat.html
+++ b/chat.html
@@ -312,12 +312,12 @@
     }
 
     function contactAdmin() {
-        window.open('https://t.me/contactAdmin', '_blank');
+        window.open('https://wa.me/6283830979232', '_blank');
         document.getElementById('menuItems').style.display = 'none';
     }
 
     function sawer() {
-        window.open('https://saweria.co/sawerAdmin', '_blank');
+        window.open('/sawer.jpeg', '_blank');
         document.getElementById('menuItems').style.display = 'none';
     }
 </script>
