--- a/chat.html
+++ b/chat.html
@@ -315,7 +315,7 @@
     }
 
     function contactAdmin() {
-        window.open('https://wa,.me/6283830979232', '_blank');
+        window.open('https://wa.me/6283830979232', '_blank');
         document.getElementById('menuItems').style.display = 'none';
     }
 
