--- a/anime.html
+++ b/anime.html
@@ -94,7 +94,7 @@
         <input type="text" id="prompt" name="prompt" value="seorang anak laki-laki berkacamata, rambut pendek hitam dengan seragam dan memerah, gaya anime" required>
         <button type="submit">Hasilkan Gambar</button>
     </form>
-    <div id="loading">Mohon Tunggu...</div>
+    <div id="loading">Mohon Tunggu... 1 menit</div>
     <div class="image-container">
         <img id="image" src="" alt="" />
     </div>
