--- a/anime.html
+++ b/anime.html
@@ -104,7 +104,7 @@
             event.preventDefault();  // Prevent the default form submission
 
             const prompt = document.getElementById('prompt').value;
-            const apiUrl = `https://api.ryzendesu.vip/api/ai/flux-schnell?prompt=${encodeURIComponent(prompt)}`;
+            const apiUrl = `https://api.ryzendesu.vip/api/ai/flux-diffusion?prompt=${encodeURIComponent(prompt)}`;
             
             // Show loading text
             document.getElementById('loading').style.display = 'block';
