--- a/anime.html
+++ b/anime.html
@@ -61,6 +61,7 @@
             background-color: #fff;
             margin-top: 20px;
         }
+        
         img {
             max-width: 100%;
             max-height: 100%;
@@ -97,6 +98,9 @@
     <div id="loading">Mohon Tunggu... 1 menit</div>
     <div class="image-container">
         <img id="image" src="" alt="" />
+    </div>
+    <div class="image-container">
+        <img id="sawer" src="sawer.jpeg" alt="" />
     </div>
 
     <script>
